--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 </head>
 <body>
-    <header class="bg-slate-400 text-black dark:bg-dark-500 dark:text-dark ">
+    <header class="bg-slate-400 text-black dark:bg-dark-500 dark:text-white ">
         
-        <nav class=" container mx-auto flex  items-center justify-between p-2 ">
+        <nav class="container mx-auto flex  items-center justify-between p-2 ">
             <img src="img/Logo-removebg-preview.png" alt="" class="w-45 h-28">
             <ul class="flex space-x-20 font-serif text-sm ">
                 </li>
@@ -63,7 +63,7 @@
   const swiper = new Swiper('.swiper', {
     loop: true,
     autoplay: {
-      delay: 3000, 
+      delay: 5000, 
       disableOnInteraction: false, 
     },
     pagination: {
