--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="container mx-auto flex items-center justify-between p-2">
             <img src="img/Logo_DR.png" alt="Logo" class="w-50 h-40">
             <ul class="flex space-x-20 font-serif text-sm">
-                <li><a href="" class="hover:bg-slate-500 p-2">INICIO</a></li>
+                <li><a href="index.html"hover:bg-slate-500 p-2">INICIO</a></li>
                 <li><a href="" class="hover:bg-slate-500 p-2">PROYECTOS</a></li>
                 <li><a href="" class="hover:bg-slate-500 p-2">SERVICIOS</a></li>
                 <li><a href="" class="hover:bg-slate-500 p-2">CLIENTES</a></li>
